# data-visualization

./: README.md  data_vis.ipynb  movie-data.ipynb  pyproject.toml
data/: movies.csv
