[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["will-ing <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
matplotlib = "^3.2.2"
jupyterlab = "^2.1.5"
sklearn = "^0.0"
pylint = "^2.5.3"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
